<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cartActivity.CartActivity"
    android:id="@+id/cart_fragment_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/orderSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="Order Summary"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/movieName"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Movie Name:"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textViewMovieName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.6"
                android:text="The Wolf Of  Wall Street "
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movieTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:text="Movie Time:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMovieTime"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="11:00 PM"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewSelectedSeats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Seat Number:"
                android:layout_weight="0.3"
                android:textStyle="bold"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/textViewSeatID"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="1, 2, 3"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/numOfTickets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Num of Ticket(s):"
                android:layout_weight="0.3"
                android:textStyle="bold"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/textViewNumOfTickets"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="3"
                android:layout_gravity="center_vertical"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_paybill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="Pay the bill"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

</RelativeLayout>