<resources>
    <string name="app_name">MovieKnight</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_prompt">Select User:</string>
    <string name="login_button">LOGIN</string>
</resources>