<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie_list"
        android:icon="@drawable/ic_baseline_local_movies_24"
        android:title="Movies" />

    <item
        android:id="@+id/nav_tickets"
        android:icon="@drawable/ic_baseline_local_play_24"
        android:title="My Tickets" />

</menu>