...
            android:text="@string/login_prompt"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:choiceMode="singleChoice"
            android:clickable="true"
...
