<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ticketPage.TicketFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tickets_recycler_view"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
</FrameLayout>